adding content to the discover page

--- a/discover.html
+++ b/discover.html
@@ -1,66 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Discover</title>
     <style>
      body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-  }
-  .header {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px 20px;
-    background-color: #fff;
-    border-bottom: 1px solid #ccc;
-  }
-  .logo {
-    font-weight: bold;
-  }
-  .logo a {
-    text-decoration: none;
-    color: #333;
-    font-size: 24px;
-  }
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f9f9f9;
+     }
 
-  .nav-buttons {
-    display: flex;
-    gap: 10px;
-  }
-  .nav-buttons button {
-    padding: 8px 12px;
-    border: 1px solid #ccc;
-    background-color: #fff;
-    border-radius: 4px;
-    cursor: pointer;
-  }
+     .header {
+        display: flex;
+        justify-content: space-between;
+        padding: 10px 20px;
+        background-color: #fff;
+        border-bottom: 1px solid #ccc;
+     }
 
-  .auth-links {
-    display: flex;
-    gap: 10px;
-    margin-left: 20px;
-  }
-  .auth-links a {
-      padding: 8px 20px;
-      text-decoration: none;
-      color: white;
-      background-color: #007bff; /* Blue */
-      border-radius: 50px; /* Fully rounded */
-      border: none;
-      display: inline-block;
-      transition: background-color 0.3s;
-    }
+     .logo {
+        font-weight: bold;
+     }
 
-    .auth-links a:hover {
-      background-color: #0056b3; /* Darker blue on hover */
-    }
-</style>
+     .logo a {
+        text-decoration: none;
+        color: #333;
+        font-size: 24px;
+     }
+
+     .nav-buttons {
+        display: flex;
+        gap: 10px;
+     }
+
+     .nav-buttons button {
+        padding: 8px 12px;
+        border: 1px solid #ccc;
+        background-color: #fff;
+        border-radius: 4px;
+        cursor: pointer;
+     }
+
+     .auth-links {
+        display: flex;
+        gap: 10px;
+        margin-left: 20px;
+     }
+
+     .auth-links a {
+        padding: 8px 20px;
+        text-decoration: none;
+        color: white;
+        background-color: #007bff;
+        border-radius: 50px;
+        border: none;
+        display: inline-block;
+        transition: background-color 0.3s;
+     }
+
+     .auth-links a:hover {
+        background-color: #0056b3;
+     }
+
+     
+     .venue-details {
+        max-width: 800px;
+        margin: 20px auto;
+        background: #fff;
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0,0,0,0.1);
+     }
+
+     .venue-title {
+        font-size: 28px;
+        margin-bottom: 10px;
+     }
+
+     .venue-info {
+        margin-bottom: 20px;
+     }
+
+     .reviews {
+        margin-top: 30px;
+     }
+
+     .review {
+        border-top: 1px solid #eee;
+        padding: 10px 0;
+     }
+
+     .review:first-child {
+        border-top: none;
+     }
+
+     .review-top {
+        font-weight: bold;
+        margin-bottom: 5px;
+     }
+
+     /* Star rating */
+     .stars {
+        color: #ffc107; 
+     }
+     .content {
+        text-align: center;
+        margin: 20px;
+     }
+    </style>
 </head>
 <body>
-    
+
 <div class="header">
   <div class="logo"><a href="home.html">VENUE~WISE</a></div>
   <div class="nav-buttons">
@@ -73,5 +125,46 @@
     <a href="login.html">Log in</a>
   </div>
 </div>
+
+<div class="content">
+<h2>See what others have to say...</h2>
+</div>
+
+<div class="venue-details">
+  <div class="venue-title">Shamba Cafe</div>
+  <div class="venue-info">
+    <p><strong>Rating:</strong> ★★★★★ (5.0 out of 5)</p>
+    <p><strong>Address:</strong> Loresho Ridge, Nairobi</p>
+    <p><strong>Phone number:</strong> 0757 701080</p>
+  </div>
+
+ 
+  <div class="reviews">
+    <h3>Top Reviews</h3>
+    <div class="review">
+      <div class="review-top">"Amazing atmosphere and fresh farm-to-table food. Perfect spot for a relaxing lunch." — Grace M.</div>
+      <div class="stars">★★★★★</div>
+    </div>
+    <div class="review">
+      <div class="review-top">"Loved the outdoor setting and the friendly staff. Will definitely visit again." — Daniel K.</div>
+      <div class="stars">★★★★★</div>
+    </div>
+    <div class="review">
+      <div class="review-top">"The coffee was excellent, and the vibe is so peaceful. Highly recommend!" — Aisha S.</div>
+      <div class="stars">★★★★★</div>
+    </div>
+
+    <h3>Average Ratings</h3>
+    <p><strong>Ratings Breakdown:</strong></p>
+    <ul>
+      <li>5 Stars: 70 reviews (82%)</li>
+      <li>4 Stars: 10 reviews (12%)</li>
+      <li>3 Stars: 3 reviews (3%)</li>
+      <li>2 Stars: 1 review (1%)</li>
+      <li>1 Star: 1 review (1%)</li>
+    </ul>
+  </div>
+</div>
+
 </body>
 </html>
