--- a/login.html
+++ b/login.html
@@ -91,9 +91,9 @@
   <div class="logo"><a href="home.html">VENUE~WISE</a>
   </div>
   <h2>Already have an account?</h2>
-  <form>
-    <input type="email" id="email" placeholder="Email" style="width: 370px; height: 30px; font-size: 14px;" required />
-    <input type="password" placeholder="Password" style="width: 350px; height: 20px; font-size: 14px;" required />
+  <form id=loginForm>
+     <input type="email" id="email" placeholder="Email" style="width: 370px; height: 30px; font-size: 14px;" required />
+    <input type="password" id="password" placeholder="Password" style="width: 350px; height: 20px; font-size: 14px;" required />
     <button type="submit" class="login-btn" style="width: 380px; height: 40px; font-size: 14px;" >Log in</button>
   </form>
   <div id="error-message"></div>
