--- a/signup.html
+++ b/signup.html
@@ -97,7 +97,7 @@
   <h2>Don't have an account yet?</h2>
   <form id="signupForm">
     <input type="email" id="email" placeholder="Email address" style="width: 350px; height: 20px; font-size: 14px;" required />
-    <input type="fullname" id="fullname" placeholder="Full name" style="width: 350px; height: 20px; font-size: 14px;" required />
+    <input type="text" id="username" placeholder="Full name" style="width: 350px; height: 20px; font-size: 14px;" required />
     <div class="password-wrapper">
   <input type="password" id="password" placeholder="Password" style="width: 332px; height: 20px; font-size: 14px;" required />
   <span class="toggle-password" onclick="togglePassword()" title="Show Password">👁️</span>
@@ -133,7 +133,7 @@
     document.getElementById('signupForm').addEventListener('submit', async (e) => {
       e.preventDefault();
 
-      const username = document.getElementById('username').value.trim();
+      const fullname = document.getElementById('username').value.trim();
       const email = document.getElementById('email').value.trim();
       const password = document.getElementById('password').value.trim();
       const role = document.getElementById('role').value;
@@ -145,7 +145,7 @@
           headers: {
             'Content-Type': 'application/json'
           },
-          body: JSON.stringify({ username, email, password, role })
+          body: JSON.stringify({ username: fullname, email, password, role })
         });
 
         const raw = await res.text();
