--- a/home.html
+++ b/home.html
@@ -35,8 +35,11 @@
     padding: 8px 12px;
     border: 1px solid #ccc;
     background-color: #fff;
-    border-radius: 4px;
+    border-radius: 50px;
     cursor: pointer;
+  }
+  .nav-buttons button:hover {
+    background-color: #f0f0f0; 
   }
 
   .auth-links {
@@ -48,15 +51,15 @@
       padding: 8px 20px;
       text-decoration: none;
       color: white;
-      background-color: #007bff; /* Blue */
-      border-radius: 50px; /* Fully rounded */
+      background-color: #007bff; 
+      border-radius: 50px; 
       border: none;
       display: inline-block;
       transition: background-color 0.3s;
     }
 
     .auth-links a:hover {
-      background-color: #0056b3; /* Darker blue on hover */
+      background-color: #0056b3; 
     }
 
   .search-container {
@@ -82,8 +85,11 @@
     border: 1px solid #ccc;
     background-color: #fff;
     color: #000;
-    border-radius: 4px;
+    border-radius: 50px;
     cursor: pointer;
+  }
+  .categories button:hover{
+    background-color: #f0f0f0;
   }
 
   .main {
