--- a/discover.html
+++ b/discover.html
@@ -30,41 +30,53 @@
         font-size: 24px;
      }
 
-     .nav-buttons {
-        display: flex;
-        gap: 10px;
-     }
+  .nav-buttons {
+    display: flex;
+    gap: 10px;
+  }
+  .nav-buttons button {
+    padding: 8px 12px;
+    border: 1px solid #ccc;
+    background-color: #fff;
+    border-radius: 50px;
+    cursor: pointer;
+  }
+  .nav-buttons button:hover {
+    background-color: #f0f0f0; 
+  }
 
-     .nav-buttons button {
-        padding: 8px 12px;
-        border: 1px solid #ccc;
-        background-color: #fff;
-        border-radius: 4px;
-        cursor: pointer;
-     }
+  .auth-links {
+    display: flex;
+    gap: 10px;
+    margin-left: 20px;
+  }
+  .auth-links a {
+      padding: 8px 20px;
+      text-decoration: none;
+      color: white;
+      background-color: #007bff; 
+      border-radius: 50px; 
+      border: none;
+      display: inline-block;
+      transition: background-color 0.3s;
+    }
 
-     .auth-links {
-        display: flex;
-        gap: 10px;
-        margin-left: 20px;
-     }
+    .auth-links a:hover {
+      background-color: #0056b3; 
+    }
 
-     .auth-links a {
-        padding: 8px 20px;
-        text-decoration: none;
-        color: white;
-        background-color: #007bff;
-        border-radius: 50px;
-        border: none;
-        display: inline-block;
-        transition: background-color 0.3s;
-     }
-
-     .auth-links a:hover {
-        background-color: #0056b3;
-     }
-
-     
+  .search-container {
+    display: flex;
+    justify-content: center;
+    margin: 20px;
+  }
+  .search-box {
+    width: 600px;
+    height: 40px;
+    padding: 8px;
+    border: 1px solid #888;
+    border-radius: 4px;
+  }  
      .venue-details {
         max-width: 800px;
         margin: 20px auto;
