--- a/near_you.html
+++ b/near_you.html
@@ -26,6 +26,7 @@
     color: #333;
     font-size: 24px;
   }
+
   .nav-buttons {
     display: flex;
     gap: 10px;
@@ -34,9 +35,13 @@
     padding: 8px 12px;
     border: 1px solid #ccc;
     background-color: #fff;
-    border-radius: 4px;
+    border-radius: 50px;
     cursor: pointer;
   }
+  .nav-buttons button:hover {
+    background-color: #f0f0f0; 
+  }
+
   .auth-links {
     display: flex;
     gap: 10px;
@@ -54,8 +59,22 @@
     }
 
     .auth-links a:hover {
-      background-color: #0056b3;
+      background-color: #0056b3; 
     }
+
+  .search-container {
+    display: flex;
+    justify-content: center;
+    margin: 20px;
+  }
+  .search-box {
+    width: 600px;
+    height: 40px;
+    padding: 8px;
+    border: 1px solid #888;
+    border-radius: 4px;
+  }
+  
   #venueResults {
     margin-top: 20px;
   }
