adding content to the owner dashboard + creating html pages to allow one to edit or delete a booking

--- a/notifications.html
+++ b/notifications.html
@@ -185,10 +185,10 @@
   </div>
   <div class="icons">
     <a href="notifications.html">
-    <img src="images/messages icon.png" alt="Messages Icon" style="width: 50px; height=100%; object-fit: cover;"/>
+    <img src="images/messages icon.png" alt="Messages Icon" style="width: 50px; height:100%; object-fit: cover;"/>
     </a>
     <a href="client_home.html">
-    <img src="images/Venue_wise_1_-removebg-preview.png" alt="Profile Icon" style="width: 50px; height=100%; object-fit: cover;"/>
+    <img src="images/Venue_wise_1_-removebg-preview.png" alt="Profile Icon" style="width: 50px; height:100%; object-fit: cover;"/>
     </a>
   </div>
 </div>
