--- a/client_home.html
+++ b/client_home.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Home Page</title>
+<title>Profile</title>
 <style>
   body {
     font-family: Arial, sans-serif;
@@ -184,10 +184,10 @@
   </div>
   <div class="icons">
     <a href="notifications.html">
-    <img src="images/messages icon.png" alt="Messages Icon" style="width: 50px; height=100%; object-fit: cover;"/>
+    <img src="images/messages icon.png" alt="Messages Icon" style="width: 50px; height:100%; object-fit: cover;"/>
     </a>
     <a href="client_home.html">
-    <img src="images/Venue_wise_1_-removebg-preview.png" alt="Profile Icon" style="width: 50px; height=100%; object-fit: cover;"/>
+    <img src="images/Venue_wise_1_-removebg-preview.png" alt="Profile Icon" style="width: 50px; height:100%; object-fit: cover;" />
     </a>
   </div>
 </div>
