--- a/review.html
+++ b/review.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<<<<<<< HEAD
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Review</title>
@@ -11,6 +10,7 @@
       margin: 0;
       padding: 0;
     }
+
     .header {
       display: flex;
       justify-content: space-between;
@@ -18,93 +18,49 @@
       background-color: #fff;
       border-bottom: 1px solid #ccc;
     }
+
     .logo a {
       font-weight: bold;
       text-decoration: none;
       color: #333;
       font-size: 24px;
     }
+
     .nav-buttons {
       display: flex;
       gap: 10px;
     }
+
     .nav-buttons button {
       padding: 8px 12px;
       border: 1px solid #ccc;
       background-color: #fff;
-      border-radius: 4px;
+      border-radius: 50px;
       cursor: pointer;
     }
+
+    .nav-buttons button:hover {
+      background-color: #f0f0f0;
+    }
+
     .auth-links {
       display: flex;
       gap: 10px;
       margin-left: 20px;
     }
+
     .auth-links a {
       padding: 8px 20px;
       text-decoration: none;
       color: white;
       background-color: #007bff;
       border-radius: 50px;
-=======
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Review</title>
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-  }
-  .header {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px 20px;
-    background-color: #fff;
-    border-bottom: 1px solid #ccc;
-  }
-  .logo {
-    font-weight: bold;
-  }
-  .logo a {
-    text-decoration: none;
-    color: #333;
-    font-size: 24px;
-  }
-
-  .nav-buttons {
-    display: flex;
-    gap: 10px;
-  }
-  .nav-buttons button {
-    padding: 8px 12px;
-    border: 1px solid #ccc;
-    background-color: #fff;
-    border-radius: 50px;
-    cursor: pointer;
-  }
-  .nav-buttons button:hover {
-    background-color: #f0f0f0; 
-  }
-
-  .auth-links {
-    display: flex;
-    gap: 10px;
-    margin-left: 20px;
-  }
-  .auth-links a {
-      padding: 8px 20px;
-      text-decoration: none;
-      color: white;
-      background-color: #007bff; 
-      border-radius: 50px; 
       border: none;
       display: inline-block;
->>>>>>> 394c75759e0902bdcabdc27b626e652aa839499b
       transition: background-color 0.3s;
     }
+
     .auth-links a:hover {
-<<<<<<< HEAD
       background-color: #0056b3;
     }
 
@@ -114,80 +70,40 @@
       border: 1px solid #ccc;
       padding: 20px;
       background-color: #fff;
-      box-shadow: 2px 2px 8px rgba(0,0,0,0.5);
+      box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
     }
+
     .star {
       font-size: 2em;
       cursor: pointer;
       color: #ccc;
     }
+
     .star.selected {
       color: #ffd700;
     }
+
     .rating-label {
       margin-top: 30px;
     }
+
     .review-write-label {
       margin-top: 20px;
     }
+
     .submit-button {
       margin-top: 20px;
     }
+
     .review-item {
       border-bottom: 1px solid #ccc;
       padding: 10px 0;
     }
+
     .review-item .stars {
       color: #FFD700;
     }
   </style>
-=======
-      background-color: #0056b3; 
-    }
-
-  .search-container {
-    display: flex;
-    justify-content: center;
-    margin: 20px;
-  }
-  .search-box {
-    width: 600px;
-    height: 40px;
-    padding: 8px;
-    border: 1px solid #888;
-    border-radius: 4px;
-  }
-
-.container {
-    width: 400px;
-    margin: 50px auto;
-    border: 1px solid #ccc;
-    padding: 20px;
-    background-color: #fff;
-    box-shadow: 2px 2px 8px rgba(0,0,0,0.5);
-  }
- .venue-name {
-    margin-bottom: 100px;
-  }
-  .star {
-    font-size: 2em;
-    cursor: pointer;
-    color: #ccc; 
-  }
-  .star.selected {
-    color: #ffd700; 
-  }
-  .rating-label{
-    margin-top: 30px;
-  }
-  .review-write-label {
-    margin-top: 20px;
-  }
-  .submit-button{
-    margin-top: 20px;
-  }
-</style>
->>>>>>> 394c75759e0902bdcabdc27b626e652aa839499b
 </head>
 <body>
   <div class="header">
