Implement forgot password functionality and enhance reset password process

--- a/forgot_password.html
+++ b/forgot_password.html
@@ -1,78 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Forgot Password</title>
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-  }
-  .container {
-    width: 400px;
-    margin: 50px auto;
-    border: 1px solid #ccc;
-    padding: 20px;
-    background-color: #fff;
-    box-shadow: 2px 2px 8px rgba(0,0,0,0.1);
-  }
-  .logo {
-    margin-bottom: 20px;
-  }
-  .logo a {
-    text-decoration: none;
-    color: #333;
-    font-size: 24px;
-    font-weight: bold;
-  } 
-  h2 {
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  input[type="text"],
-  input[type="password"] {
-    width: 100%;
-    padding: 8px 12px;
-    margin: 8px 0;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  .login-btn {
-    width: 100%;
-    padding: 10px;
-    border: none;
-    background-color: #333;
-    color: #fff;
-    font-size: 16px;
-    margin-top: 12px;
-    cursor: pointer;
-    border-radius: 4px;
-  }
-  .login-btn:hover {
-    background-color: #555;
-  }
-  .links {
-    margin-top: 10px;
-    text-align: center;
-  }
-  .links a {
-    color: #007BFF;
-    text-decoration: none;
-    margin: 0 10px;
-  }
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Forgot Password</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f0f0f0;
+    }
+    .container {
+      width: 400px;
+      margin: 50px auto;
+      border: 1px solid #ccc;
+      padding: 20px;
+      background-color: #fff;
+      box-shadow: 2px 2px 8px rgba(0,0,0,0.1);
+    }
+    .logo {
+      margin-bottom: 20px;
+      text-align: center;
+      font-weight: bold;
+      font-size: 24px;
+    }
+    h2 {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    p {
+      text-align: center;
+      font-size: 14px;
+      color: #555;
+    }
+    input[type="email"] {
+      width: 100%;
+      padding: 8px 12px;
+      margin: 10px 0;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      font-size: 14px;
+    }
+    .submit-btn {
+      width: 100%;
+      padding: 10px;
+      background-color: #333;
+      color: #fff;
+      font-size: 16px;
+      border: none;
+      cursor: pointer;
+      border-radius: 4px;
+    }
+    .submit-btn:hover {
+      background-color: #555;
+    }
+    .message, .error {
+      text-align: center;
+      margin-top: 10px;
+      font-size: 14px;
+    }
+    .message {
+      color: green;
+    }
+    .error {
+      color: red;
+    }
+  </style>
 </head>
 <body>
-<div class="container">
-  <div class="logo"> <a href="home.html">VENUE~WISE</a> </div>
-  <h2>Forgot password?</h2>
-  <form>
-    Enter your email or username to reset your password.
-    <br><br>
-    <input type="email" id="email" placeholder="Email address" style="width: 370px; height: 25px; font-size: 14px;" required />
-    <button type="submit" class="login-btn"style="width: 380px; height: 40px; font-size: 14px;">Submit</button>
-  </form>
-</div>
+  <div class="container">
+    <div class="logo">VENUE~WISE</div>
+    <h2>Forgot Password?</h2>
+    <form id="forgotForm">
+      <p>Enter your email and we’ll send you instructions to reset your password.</p>
+      <input type="email" id="email" placeholder="Email" required />
+      <button type="submit" class="submit-btn">Submit</button>
+    </form>
+    <div id="response-message"></div>
+  </div>
+
+  <script>
+    document.getElementById('forgotForm').addEventListener('submit', async function (e) {
+      e.preventDefault();
+      const email = document.getElementById('email').value.trim();
+      const messageDiv = document.getElementById('response-message');
+      messageDiv.textContent = '';
+      messageDiv.className = '';
+
+      try {
+        const res = await fetch('http://localhost:5000/api/auth/forgot-password', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ email })
+        });
+
+        const data = await res.json();
+
+        if (res.ok) {
+          messageDiv.textContent = data.message || 'Check your email for the reset link.';
+          messageDiv.className = 'message';
+        } else {
+          messageDiv.textContent = data.message || 'Something went wrong. Please try again.';
+          messageDiv.className = 'error';
+        }
+      } catch (err) {
+        messageDiv.textContent = 'Server error. Please try again later.';
+        messageDiv.className = 'error';
+      }
+    });
+  </script>
 </body>
 </html>
