--- a/login.html
+++ b/login.html
@@ -148,7 +148,7 @@
           } else if (role === 'owner') {
             window.location.href = 'owner_dashboard.html';
           } else if (role === 'admin') {
-            window.location.href = 'admin_panel.html';
+            window.location.href = 'admin_Dashboard.html';
           } else {
             errorMessage.textContent = 'Unknown user role. Contact support.';
           }
