added more reviews to the discover page

--- a/discover.html
+++ b/discover.html
@@ -178,5 +178,147 @@
   </div>
 </div>
 
+<div class="venue-details">
+  <div class="venue-title">Karura Forest</div>
+  <div class="venue-info">
+    <p><strong>Rating:</strong> ★★★★★ (5.0 out of 5)</p>
+    <p><strong>Address:</strong> Limuru Road, Nairobi</p>
+    <p><strong>Phone number:</strong> +254 123 456 789</p>
+  </div>
+
+  <div class="reviews">
+    <h3>Top Reviews</h3>
+    <div class="review">
+      <div class="review-top">"Beautiful natural environment with well-maintained trails. Perfect for a quick escape into nature." — Sarah N.</div>
+      <div class="stars">★★★★★</div>
+    </div>
+    <div class="review">
+      <div class="review-top">"Great for jogging and cycling, with scenic views all around. Will definitely visit again." — Michael K.</div>
+      <div class="stars">★★★★★</div>
+    </div>
+    <div class="review">
+      <div class="review-top">"Peaceful atmosphere and lush greenery. Highly recommended for outdoor lovers." — Emily R.</div>
+      <div class="stars">★★★★★</div>
+    </div>
+
+    <h3>Average Ratings</h3>
+    <p><strong>Ratings Breakdown:</strong></p>
+    <ul>
+      <li>5 Stars: 45 reviews (85%)</li>
+      <li>4 Stars: 7 reviews (13%)</li>
+      <li>3 Stars: 1 review (2%)</li>
+      <li>2 Stars: 0 reviews (0%)</li>
+      <li>1 Star: 0 reviews (0%)</li>
+    </ul>
+  </div>
+</div>
+
+<div class="venue-details">
+  <div class="venue-title">Strikez Bowling Westgate</div>
+  <div class="venue-info">
+    <p><strong>Rating:</strong> ★★★★★</p>
+    <p><strong>Located in:</strong> Westgate Mall</p>
+    <p><strong>Address:</strong> Mwanzi Road, Nairobi</p>
+    <p><strong>Phone number:</strong> 0716 274798</p>
+  </div>
+
+  <div class="reviews">
+    <h3>Top Reviews</h3>
+    <div class="review">
+      <div class="review-top">"Great atmosphere and fun for all ages. Perfect spot for a group outing." — James P.</div>
+      <div class="stars">★★★★★</div>
+    </div>
+    <div class="review">
+      <div class="review-top">"The staff was friendly and the lanes were well-maintained. Will visit again." — Lucy K.</div>
+      <div class="stars">★★★★★</div>
+    </div>
+    <div class="review">
+      <div class="review-top">"Excellent facilities and a lively vibe. Highly recommend for a fun day out." — David S.</div>
+      <div class="stars">★★★★★</div>
+    </div>
+
+    <h3>Average Ratings</h3>
+    <p><strong>Ratings Breakdown:</strong></p>
+    <ul>
+      <li>5 Stars: 50 reviews (90%)</li>
+      <li>4 Stars: 5 reviews (9%)</li>
+      <li>3 Stars: 1 review (1%)</li>
+      <li>2 Stars: 0 reviews (0%)</li>
+      <li>1 Star: 0 reviews (0%)</li>
+    </ul>
+  </div>
+</div>
+
+<div class="venue-details">
+  <div class="venue-title">Harvest Restaurant</div>
+  <div class="venue-info">
+    <p><strong>Rating:</strong> ★★★★★</p>
+    <p><strong>Located in:</strong> Village Market</p>
+    <p><strong>Address:</strong> Limuru Road, Nairobi</p>
+    <p><strong>Phone number:</strong> 0732 186215</p>
+  </div>
+
+  <div class="reviews">
+    <h3>Top Reviews</h3>
+    <div class="review">
+      <div class="review-top">"Elegant decor and delicious food. Perfect for a special occasion." — Maria T.</div>
+      <div class="stars">★★★★★</div>
+    </div>
+    <div class="review">
+      <div class="review-top">"Great ambiance and attentive service. Highly recommended." — John D.</div>
+      <div class="stars">★★★★★</div>
+    </div>
+    <div class="review">
+      <div class="review-top">"Lovely outdoor seating and a peaceful atmosphere." — Grace L.</div>
+      <div class="stars">★★★★★</div>
+    </div>
+
+    <h3>Average Ratings</h3>
+    <p><strong>Ratings Breakdown:</strong></p>
+    <ul>
+      <li>5 Stars: 40 reviews (85%)</li>
+      <li>4 Stars: 7 reviews (15%)</li>
+      <li>3 Stars: 0 reviews (0%)</li>
+      <li>2 Stars: 0 reviews (0%)</li>
+      <li>1 Star: 0 reviews (0%)</li>
+    </ul>
+  </div>
+</div>
+
+<div class="venue-details">
+  <div class="venue-title">Radisson Blu Hotel</div>
+  <div class="venue-info">
+    <p><strong>Rating:</strong> ★★★★★</p>
+    <p><strong>Address:</strong> Elgon Road, Nairobi</p>
+    <p><strong>Phone number:</strong> 0709 810000</p>
+  </div>
+
+  <div class="reviews">
+    <h3>Top Reviews</h3>
+    <div class="review">
+      <div class="review-top">"Luxurious rooms and excellent service. Ideal for business trips and leisure." — Linda M.</div>
+      <div class="stars">★★★★★</div>
+    </div>
+    <div class="review">
+      <div class="review-top">"Fantastic amenities and beautiful lobby. Will definitely return." — James K.</div>
+      <div class="stars">★★★★★</div>
+    </div>
+    <div class="review">
+      <div class="review-top">"Great dining options and friendly staff. Highly recommend!" — Sarah W.</div>
+      <div class="stars">★★★★★</div>
+    </div>
+
+    <h3>Average Ratings</h3>
+    <p><strong>Ratings Breakdown:</strong></p>
+    <ul>
+      <li>5 Stars: 60 reviews (90%)</li>
+      <li>4 Stars: 7 reviews (10%)</li>
+      <li>3 Stars: 0 reviews (0%)</li>
+      <li>2 Stars: 0 reviews (0%)</li>
+      <li>1 Star: 0 reviews (0%)</li>
+    </ul>
+  </div>
+</div>
+
 </body>
 </html>
