--- a/client_home.html
+++ b/client_home.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Profile</title>
+<title>Home</title>
 <style>
   body {
     font-family: Arial, sans-serif;
@@ -186,7 +186,7 @@
     <a href="notifications.html">
     <img src="images/messages icon.png" alt="Messages Icon" style="width: 50px; height:100%; object-fit: cover;"/>
     </a>
-    <a href="client_home.html">
+    <a href="client_profile.html">
     <img src="images/Venue_wise_1_-removebg-preview.png" alt="Profile Icon" style="width: 50px; height:100%; object-fit: cover;" />
     </a>
   </div>
