editing client profile and related pages

--- a/client_bookings.html
+++ b/client_bookings.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Profile</title>
+<title>My Bookings</title>
 <style>
   body {
     margin: 0;
@@ -135,7 +135,6 @@
   <h2><a href="client_home.html"></a>VENUE~WISE</h2>
   <a href="client_bookings.html">My Bookings</a>
   <a href="client_reviews.html">My Reviews</a>
-  <a href="notifications.html">Notifications</a>
     <button class="logout" onclick="location.href='index.html'">Logout</button>
 </div>
 
@@ -166,8 +165,8 @@
 
 
 <div style="margin-top: 20px;">
-<h1>Welcome to Your Profile</h1>
-<p>This is your main content area.</p>
+<h1>My Bookings</h1>
+<p>You have not made any bookings yet</p>
 </div>
 
 </div>
