--- a/client_reviews.html
+++ b/client_reviews.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Profile</title>
+<title>My Reviews</title>
 <style>
   body {
     margin: 0;
@@ -166,8 +166,8 @@
 
 
 <div style="margin-top: 20px;">
-<h1>Welcome to Your Profile</h1>
-<p>This is your main content area.</p>
+<h1>My Reviews</h1>
+<p>You don't have any reviews now. <a href="review.html">Click here</a> to start on one</p>
 </div>
 
 </div>
