--- a/client_bookings.html
+++ b/client_bookings.html
@@ -132,7 +132,7 @@
 
 
 <div class="sidebar">
-  <h2><a href="client_home.html"></a>VENUE~WISE</h2>
+  <h2><a href="client_home.html">VENUE~WISE</a></h2>
   <a href="client_bookings.html">My Bookings</a>
   <a href="client_reviews.html">My Reviews</a>
     <button class="logout" onclick="location.href='index.html'">Logout</button>
