creating client versions of all the pages with buttons on the home page

--- a/client_home.html
+++ b/client_home.html
@@ -176,11 +176,11 @@
 <body>
 
 <div class="header">
-  <div class="logo"><a href="home.html">VENUE~WISE</a></div>
+  <div class="logo"><a href="client_home.html">VENUE~WISE</a></div>
   <div class="nav-buttons">
-    <button onclick="location.href='near_you.html'">Near you</button>
-    <button onclick="location.href='discover.html'">Discover</button>
-    <button onclick="location.href='review.html'">Review</button>
+    <button onclick="location.href='client_nearyou.html'">Near you</button>
+    <button onclick="location.href='client_discover.html'">Discover</button>
+    <button onclick="location.href='client_review.html'">Review</button>
   </div>
   <div class="icons">
     <a href="notifications.html">
@@ -197,11 +197,11 @@
 </div>
 
 <div class="categories">
-  <button onclick="location.href='restaurants.html'">Restaurants</button>
-  <button onclick="location.href='hotels.html'">Hotels</button>
-  <button onclick="location.href='things_to_do.html'">Things to do</button>
-  <button onclick="location.href='bnbs.html'">BnBs</button>
-  <button onclick="location.href='outdoors.html'">Outdoors</button>
+  <button onclick="location.href='client_restaurants.html'">Restaurants</button>
+  <button onclick="location.href='client_hotels.html'">Hotels</button>
+  <button onclick="location.href='client_ttd.html'">Things to do</button>
+  <button onclick="location.href='client_bnbs.html'">BnBs</button>
+  <button onclick="location.href='client_outdoors.html'">Outdoors</button>
 </div>
 
 <div class="main">
