updating the toplink links in the client profile

--- a/client_bookings.html
+++ b/client_bookings.html
@@ -149,9 +149,9 @@
         </a>
     </div>
   <div class="nav-buttons">
-    <button onclick="location.href='near_you.html'">Near you</button>
-    <button onclick="location.href='discover.html'">Discover</button>
-    <button onclick="location.href='review.html'">Review</button>
+    <button onclick="location.href='client_nearyou.html'">Near you</button>
+    <button onclick="location.href='client_discover.html'">Discover</button>
+    <button onclick="location.href='client_review.html'">Review</button>
   </div>
   <div class="icons">
     <a href="notifications.html">
