--- a/bnbs.html
+++ b/bnbs.html
@@ -136,18 +136,16 @@
   
   <div class="hotel-list">
     <div class="image-text-container">
-      <img src="images/Tribe.jpg" class="venue-image" width="300" alt="">
+      <img src="images/airbnb 1.avif" class="venue-image" width="300" alt="">
       <div class="hotel-description">
-        <h4>The Tribe Hotel</h4>
+        <h4>Private Lodge bordering the National Park</h4>
         <div class="star-rating">★★★★☆</div>
         <div class="hotel-description">
-        <p>Located in: Village Market.
+        <p>Located: near Nairobi National Park.
             <br><br>
-            Address: Limuru Road, Nairobi
+            Phone number: 011 1234333
             <br><br>
-            Phone number: 020 7200000
-            <br><br>
-            Have an event? <a href="booking.html">Click here to book</a>
+            Want to book a stay? <a href="booking.html">Click here </a>
         </p>
       </div>
       </div>
