--- a/client_reviews.html
+++ b/client_reviews.html
@@ -135,7 +135,6 @@
   <h2><a href="client_home.html">VENUE~WISE</a></h2>
   <a href="client_bookings.html">My Bookings</a>
   <a href="client_reviews.html">My Reviews</a>
-  <a href="notifications.html">Notifications</a>
     <button class="logout" onclick="location.href='index.html'">Logout</button>
 </div>
 
@@ -150,9 +149,9 @@
         </a>
     </div>
   <div class="nav-buttons">
-    <button onclick="location.href='near_you.html'">Near you</button>
-    <button onclick="location.href='discover.html'">Discover</button>
-    <button onclick="location.href='review.html'">Review</button>
+    <button onclick="location.href='client_nearyou.html'">Near you</button>
+    <button onclick="location.href='client_discover.html'">Discover</button>
+    <button onclick="location.href='client_review.html'">Review</button>
   </div>
   <div class="icons">
     <a href="notifications.html">
