updating the bnb pages

--- a/bnbs.html
+++ b/bnbs.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Hotels</title>
+<title>BnBs</title>
 <link rel="stylesheet" href="css/structure.css">
 <style>
   body {
@@ -131,7 +131,7 @@
 <div class="content">
   <br><br>
   <div class="section"></div>
-  <h3>Discover luxury hotels in Nairobi</h3>
+  <h3>Find a BnB to stay at</h3>
   
   
   <div class="hotel-list">
@@ -143,6 +143,8 @@
         <div class="hotel-description">
         <p>Located: near Nairobi National Park.
             <br><br>
+            4 guests, 2 bedrooms, 4 beds, 2 baths
+            <br><br>
             Phone number: 011 1234333
             <br><br>
             Want to book a stay? <a href="booking.html">Click here </a>
@@ -150,53 +152,42 @@
       </div>
       </div>
     </div>
-    <div class="image-text-container">
-      <img src="images/kempinski.jpg" class="venue-image" width="300" alt="">
-      <div class="hotel-description">
-        <h4>Villa Rosa Kempinski Hotel</h4>
-        <div class="star-rating">★★★★★</div>
-        <div class="hotel-description"></div>
-        <p>
-            Address: Chiromo Road, Nairobi
-            <br><br>
-            Phone number: 0703 049000
-            <br><br>
-            Have an event? <a href="booking.html">Click here to book</a>
-        </p>
-      </div>
-      </div>
     </div>
+
+    
     <div class="image-text-container">
-      <img src="images/kwetu.jpg" class="venue-image" width="300" alt="">
+      <img src="images/airbnb 2.avif" class="venue-image" width="300" alt="">
       <div class="hotel-description">
-        <h4>Kwetu Hotel</h4>
-        <div class="star-rating">★★★☆☆</div>
+        <h4>Karen guest cottage with views of Ngong Hills</h4>
+        <div class="star-rating">★★★★☆</div>
         <div class="hotel-description">
-        <p>
-            Address: Peponi Road, Nairobi
+        <p>Located: near Karen.
             <br><br>
-            Phone number: 0709 588000
+            2 guests, 1 bedroom, 1 bed, 1 bath
             <br><br>
-            Have an event? <a href="booking.html">Click here to book</a>
-            </div>
+            Phone number: 011 1234444
+            <br><br>
+            Want to book a stay? <a href="booking.html">Click here </a>
         </p>
+      </div>
       </div>
     </div>
 
     <div class="image-text-container">
-      <img src="images/radisson blu.jpg" class="venue-image" width="300" alt="">
+      <img src="images/airbnb 3.avif" class="venue-image" width="300" alt="">
       <div class="hotel-description">
-        <h4>Radisson Blu Hotel</h4>
-        <div class="star-rating">★★★★★</div>
+        <h4>Luxe Kilimani Studio</h4>
+        <div class="star-rating">★★★★☆</div>
         <div class="hotel-description">
-        <p>
-            Address: Elgon Road, Nairobi
+        <p>Located: in Kilimani.
             <br><br>
-            Phone number: 0709 810000
+            3 guests, 1 bedroom, 1 bed, 1 bath
             <br><br>
-            Have an event? <a href="booking.html">Click here to book</a>
-            </div>
+            Phone number: 011 1234555
+            <br><br>
+            Want to book a stay? <a href="booking.html">Click here </a>
         </p>
+      </div>
       </div>
     </div>
 
