--- a/booking.html
+++ b/booking.html
@@ -190,8 +190,8 @@
   <label for="name">Name:</label><br />
   <input type="text" id="name" name="name" required /><br /><br />
 
-  <label for="email">Email Address:</label><br />
-  <input type="email" id="email" name="email" required /><br /><br />
+  <label for="venue">Venue Name</label><br />
+  <input type="text" id="venue" name="venue" required /><br /><br />
 
   <label for="phone">Phone Number:</label><br />
   <input type="tel" id="phone" name="phone" required /><br /><br />
