--- a/client_hotels.html
+++ b/client_hotels.html
@@ -133,7 +133,7 @@
             <br><br>
             Phone number: 020 7200000
             <br><br>
-            Have an event? <a href="booking.html">Click here to book</a>
+            Have an event? <a href="client_bookingm.html">Click here to book</a>
         </p>
       </div>
       </div>
@@ -149,7 +149,7 @@
             <br><br>
             Phone number: 0703 049000
             <br><br>
-            Have an event? <a href="booking.html">Click here to book</a>
+            Have an event? <a href="client_bookingm.html">Click here to book</a>
         </p>
       </div>
       </div>
@@ -165,7 +165,7 @@
             <br><br>
             Phone number: 0709 588000
             <br><br>
-            Have an event? <a href="booking.html">Click here to book</a>
+            Have an event? <a href="client_bookingm.html">Click here to book</a>
             </div>
         </p>
       </div>
