--- a/client_outdoors.html
+++ b/client_outdoors.html
@@ -130,7 +130,7 @@
             <br><br>
             Phone number: 0110 022222
             <br><br>
-            Want to book this place for an event? <a href="booking.html">Click here</a>
+            Want to book this place for an event? <a href="client_bookingm.html">Click here</a>
         </p>
         </div>
       </div>
@@ -147,7 +147,7 @@
             <br><br>
             Address: Limuru Road, Nairobi
             <br><br>
-            Want to book this place for an event? <a href="booking.html">Click here</a>
+            Want to book this place for an event? <a href="client_bookingm.html">Click here</a>
         </p>
         </div>
       </div>
@@ -168,7 +168,7 @@
             <br><br>
             Phone number: 0715 969696
             <br><br>
-            Want to book this place for an event? <a href="booking.html">Click here</a>
+            Want to book this place for an event? <a href="client_bookingm.html">Click here</a>
         </p>
         </div>
       </div>
