--- a/client_ttd.html
+++ b/client_ttd.html
@@ -131,7 +131,7 @@
             <br><br>
             Phone number: 0796 110706
             <br><br>
-            Want to book this place for an event? <a href="booking.html">Click here</a>
+            Want to book this place for an event? <a href="client_bookingm.html">Click here</a>
         </p>
         </div>
       </div>
@@ -150,7 +150,7 @@
             <br><br>
             Phone number: 0716 274798
             <br><br>
-            Want to book this place for an event? <a href="booking.html">Click here</a>
+            Want to book this place for an event? <a href="client_bookingm.html">Click here</a>
         </p>
         </div>
       </div>
@@ -169,7 +169,7 @@
             <br><br>
             Phone number: 0719 413961
             <br><br>
-            Want to book this place for an event? <a href="booking.html">Click here</a>
+            Want to book this place for an event? <a href="client_bookingm.html">Click here</a>
         </p>
         </div>
       </div>
