--- a/client_bookingm.html
+++ b/client_bookingm.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>BnBs</title>
-<link rel="stylesheet" href="css/structure.css">
+<title>Home Page</title>
 <style>
   body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
   }
+
   .header {
     display: flex;
     justify-content: space-between;
@@ -92,28 +92,84 @@
     background-color: #f0f0f0;
   }
 
-  
-  .image-text-container {
+  .main {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    gap: 20px; 
-    margin-bottom: 20px; 
   }
 
+  .banner {
+    margin: 20px auto;
+    width: 600px;
+    height: 150px;
+    border: 1px solid #888;
+    position: relative;
+  }
+
+  .section {
+    width: 90%;
+    max-width: 650px;
+    margin: 20px 0;
+  }
+  .section h3 {
+    margin-bottom: 10px;
+    text-align: left;
+  }
+
+  .container {
+    width: 400px;
+    margin: 50px auto;
+    border: 1px solid #ccc;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 2px 2px 8px rgba(0,0,0,0.1);
+  }
+
+  .arrow-left,
+  .arrow-right {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: rgba(255,255,255,0.8);
+    border: none;
+    font-size: 24px;
+    padding: 10px;
+    cursor: pointer;
+    border-radius: 50%;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+
+  .arrow-left {
+    left: 10px;
+  }
+  .arrow-right {
+    right: 10px;
+  }
+
+  .venue-list {
+    display: flex;
+    overflow-x: auto;
+    gap: 10px;
+    padding: 10px 0;
+    width: 100%;
+    scrollbar-width: none;
+  }
   
-  .star-rating {
-    font-size: 20px; 
-    color: gold; 
-    margin-top: 8px; 
+  .venue-list::-webkit-scrollbar {
+    display: none;
   }
 
- 
-  .hotel-description {
-    max-width: 600px; 
+  .venue-image {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    display: block;
   }
 </style>
 </head>
 <body>
+
 
 <div class="header">
   <div class="logo"><a href="client_home.html">VENUE~WISE</a></div>
@@ -132,70 +188,38 @@
   </div>
 </div>
 
-<div class="content">
-  <br><br>
-  <div class="section"></div>
-  <h3>Find a BnB to stay at</h3>
-  
-  
-  <div class="hotel-list">
-    <div class="image-text-container">
-      <img src="images/airbnb 1.avif" class="venue-image" width="300" alt="">
-      <div class="hotel-description">
-        <h4>Private Lodge bordering the National Park</h4>
-        <div class="star-rating">★★★★☆</div>
-        <div class="hotel-description">
-        <p>Located: near Nairobi National Park.
-            <br><br>
-            4 guests, 2 bedrooms, 4 beds, 2 baths
-            <br><br>
-            Phone number: 011 1234333
-            <br><br>
-            Want to book a stay? <a href="client_bookingm.html">Click here </a>
-        </p>
-      </div>
-      </div>
-    </div>
-    </div>
 
-    
-    <div class="image-text-container">
-      <img src="images/airbnb 2.avif" class="venue-image" width="300" alt="">
-      <div class="hotel-description">
-        <h4>Karen guest cottage with views of Ngong Hills</h4>
-        <div class="star-rating">★★★★☆</div>
-        <div class="hotel-description">
-        <p>Located: near Karen.
-            <br><br>
-            2 guests, 1 bedroom, 1 bed, 1 bath
-            <br><br>
-            Phone number: 011 1234444
-            <br><br>
-            Want to book a stay? <a href="client_bookingm.html">Click here </a>
-        </p>
-      </div>
-      </div>
-    </div>
+<div class="container">
 
-    <div class="image-text-container">
-      <img src="images/airbnb 3.avif" class="venue-image" width="300" alt="">
-      <div class="hotel-description">
-        <h4>Luxe Kilimani Studio</h4>
-        <div class="star-rating">★★★★☆</div>
-        <div class="hotel-description">
-        <p>Located: in Kilimani.
-            <br><br>
-            3 guests, 1 bedroom, 1 bed, 1 bath
-            <br><br>
-            Phone number: 011 1234555
-            <br><br>
-            Want to book a stay? <a href="client_bookingm.html">Click here </a>
-        </p>
-      </div>
-      </div>
-    </div>
+  <h2>Want to book a venue for an event?</h2>
+  <form>
+  <label for="name">Name:</label><br />
+  <input type="text" id="name" name="name" required /><br /><br />
 
-  </div>
+  <label for="venue">Venue Name</label><br />
+  <input type="text" id="venue" name="venue" required /><br /><br />
+
+  <label for="phone">Phone Number:</label><br />
+  <input type="tel" id="phone" name="phone" required /><br /><br />
+
+  <label for="date">Event Date:</label><br />
+  <input type="date" id="date" name="date" required /><br /><br />
+
+  <label for="time">Event Time:</label><br />
+  <input type="time" id="time" name="time" required /><br /><br />
+
+  <label for="guests">Number of Guests:</label><br />
+  <input type="number" id="guests" name="guests" min="1" required /><br /><br />
+
+  <label for="requirements">Venue Requirements:</label><br />
+  <textarea id="requirements" name="requirements" rows="4" placeholder="Specify any needs or equipment..."></textarea><br /><br />
+
+  <label for="notes">Additional Notes:</label><br />
+  <textarea id="notes" name="notes" rows="4" placeholder="Any other info or requests..."></textarea><br /><br />
+
+  <button type="submit">Submit Booking Request</button>
+</form>
+
 </div>
 
 </body>
