--- a/client_restaurants.html
+++ b/client_restaurants.html
@@ -129,7 +129,7 @@
             <br><br>
             Phone number: 0757 701080 
             <br><br>
-            Want to book a table? <a href="booking.html">Click here</a>
+            Want to book a table? <a href="client_bookingm.html">Click here</a>
         </p>
         </div>
       </div>
@@ -147,7 +147,7 @@
             <br><br>
             Phone number: 0722 204647
             <br><br>
-            Want to book a table? <a href="booking.html">Click here</a>
+            Want to book a table? <a href="client_bookingm.html">Click here</a>
         </p>
         </div>
       </div>
@@ -166,7 +166,7 @@
             <br><br>
             Phone number: 0732 186215
             <br><br>
-            Want to book a table? <a href="booking.html">Click here</a>
+            Want to book a table? <a href="client_bookingm.html">Click here</a>
             </div>
         </p>
       </div>
@@ -182,7 +182,7 @@
             <br><br>
             Phone number: 0707 800800
             <br><br>
-            Want to book a table? <a href="booking.html">Click here</a>
+            Want to book a table? <a href="client_bookingm.html">Click here</a>
         </p>
         </div>
         </div>
